traffic-splitting/frontend-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: apps
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
        - name: server
          args: ["-listen=:8080", "-text=\"Hi from frontend version 2\""]
          image: hashicorp/http-echo:0.2.3
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
              # httpHeaders:
              # - name: "Cookie"
              #   value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 10m
              memory: 16Mi
